BAP-3743: All numbers in grids should be right aligned (except phone numbers)  - CR fixes  - small improvements

--- a/src/Oro/Bundle/DataGridBundle/Resources/public/css/oro.grid.css
+++ b/src/Oro/Bundle/DataGridBundle/Resources/public/css/oro.grid.css
@@ -70,7 +70,12 @@ table.grid tbody tr.row-click-action {
 
 table.grid tr .string-cell,
 table.grid tr .uri-cell,
-table.grid tr .email-cell {
+table.grid tr .email-cell,
+table.grid tr .select-cell,
+table.grid tr .date-cell,
+table.grid tr .time-cell,
+table.grid tr .datetime-cell,
+table.grid tr .boolean-cell {
     text-align: left;
 }
 
@@ -79,10 +84,7 @@ table.grid tr .integer-cell {
     text-align: right;
 }
 
-table.grid tr .date-cell,
-table.grid tr .time-cell,
-table.grid tr .datetime-cell,
-table.grid tr .boolean-cell,
-table.grid tr .select-cell {
-    text-align: center;
+table.grid tr td:first-child,
+table.grid tr th:first-child {
+    text-align: left !important;
 }
